--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.13.1",
     "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "snake-function": "^1.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
